src/test/deca/codegen/valid/created/SelectionOnNew.deca
// Description:
//    Test de la selection sur un new
// Resultats:
//    1

class A{
    int x = 1;
}

{
    int a = (new A()).x;
    println(a);
}