src/test/deca/codegen/invalid/created/SelectionArithmeticNull.deca
// Description:
//  Test for arithmetic operation with a null selection
// Resultats:
//  Contextual error on cast ?

class A {
}

{
    A newA = new A();
    int b = (int)(newA) + 1;
    println("ERRONE");
}